--- a/src/scss/generalStyles/general.scss
+++ b/src/scss/generalStyles/general.scss
@@ -3,14 +3,21 @@ html {
 }
 
 body {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
   font-family: "Roboto", sans-serif;
   color: $main-color;
   background-color: lightgray;
   max-width: 100vw;
+  line-height: 1;
+}
+
+.app-container {
+  max-width: 1440px;
+  margin-inline: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   min-height: 100vh;
+  background: #f5f3f4;
 }
 
 @import "components/header";
