--- a/src/scss/components/header.scss
+++ b/src/scss/components/header.scss
@@ -26,12 +26,12 @@ header {
     left: 0;
     width: 0;
     height: 1px;
-    background-color: $accent-color;
+    background-color: $accent-color-dark;
     transition-duration: 0.8s;
   }
 
   &:hover {
-    color: $accent-color;
+    color: $accent-color-dark;
 
     &::after {
       width: 100%;
