feat: add section 'Remote-firts'

--- a/src/scss/components/main.scss
+++ b/src/scss/components/main.scss
@@ -6,3 +6,6 @@ main {
 @import "banner";
 @import "benefits";
 @import "ci-cd";
+@import "remote-first";
+@import "testimonials";
+@import "get-started";
