--- a/src/scss/components/get-started.scss
+++ b/src/scss/components/get-started.scss
@@ -48,6 +48,10 @@
   background: #fff;
 }
 
+.workspace {
+  padding-inline: 8px;
+}
+
 .git__links {
   margin-block: 64px;
   display: flex;
@@ -99,11 +103,13 @@
   padding-right: 12px;
   border-radius: 12px;
   background: #f9f9f9;
+  text-align: left;
 }
 
 .workspace__options-item > span {
   display: flex;
   align-items: center;
+  justify-content: flex-start;
   column-gap: 16px;
   font-size: 20px;
 }
@@ -116,4 +122,5 @@
   border-radius: 12px;
   padding: 8px 12px;
   background-color: $main-color;
+  min-width: 141px;
 }
