--- a/src/scss/components/header.scss
+++ b/src/scss/components/header.scss
@@ -5,6 +5,8 @@ header {
   min-height: 80px;
   text-align: center;
   @include sb-flex;
+  position: relative;
+  // overflow-y: hidden;
 }
 
 .nav__list {
@@ -14,6 +16,8 @@ header {
 
 .nav__link {
   position: relative;
+  display: inline-block;
+  width: 100%;
   font-size: 16px;
   line-height: 1.5;
   color: $main-color;
@@ -62,5 +66,77 @@ header {
     position: absolute;
     top: -6px;
     right: -14px;
+  }
+}
+
+header .btn-group {
+  @include center-flex;
+  column-gap: 16px;
+}
+
+.header-burger {
+  display: none;
+}
+
+/////////////  medium screen ////////////////
+
+@include mid-screen() {
+  .header-burger {
+    display: flex;
+    width: 36px;
+    height: 36px;
+    margin-top: 2px;
+    background-color: inherit;
+    border: 1px solid black;
+    border-radius: 50%;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 7px;
+
+    &__line {
+      width: 16px;
+      border: 1px solid black;
+      transform-origin: center;
+      transition-duration: 0.64s;
+    }
+
+    &__line.top.opened {
+      transform: translateY(5px) rotate(45deg);
+    }
+
+    &__line.bottom.opened {
+      transform: translateY(-5px) rotate(-45deg);
+      margin-top: 1.3px;
+    }
+  }
+
+  nav {
+    height: 0;
+    position: absolute;
+    top: 100%;
+    right: 12vw;
+    width: 220px;
+    background-color: $main-color;
+    padding-inline: 16px;
+    opacity: 0.8;
+    overflow: hidden;
+    border-radius: 9px;
+    transition-duration: 0.5s;
+    .nav__list {
+      flex-direction: column;
+      row-gap: 16px;
+      margin-top: 16px;
+    }
+    .nav__list-item {
+      width: 100%;
+    }
+    .nav__link {
+      color: #fff;
+    }
+  }
+
+  nav.active {
+    height: 260px;
   }
 }
