--- a/src/scss/setup/mixins.scss
+++ b/src/scss/setup/mixins.scss
@@ -9,3 +9,9 @@
   justify-content: space-between;
   align-items: center;
 }
+
+@mixin mid-screen() {
+  @media (max-width: 1100px) {
+    @content;
+  }
+}
