--- a/src/scss/generalStyles/general.scss
+++ b/src/scss/generalStyles/general.scss
@@ -1,6 +1,5 @@
 html {
   max-width: 100vw;
-  min-width: 100vw;
 }
 
 body {
@@ -8,6 +7,7 @@ body {
   color: $main-color;
   background-color: lightgray;
   line-height: 1;
+  max-width: 100vw;
 }
 
 .app-container {
