fix: styles at remote-first section

--- a/src/scss/components/remote-first.scss
+++ b/src/scss/components/remote-first.scss
@@ -63,16 +63,15 @@
   background: #fff;
   height: 47px;
   box-shadow: 0 0px 2px 0 rgba(0, 0, 0, 0.1);
+  top: -2px;
+  right: -2px;
+  height: 48px;
 }
 
 .ellipse.chrome {
-  top: -2px;
-  right: -2px;
   width: 207px;
 }
 
 .ellipse.fox {
   width: 200px;
-  top: -2px;
-  right: -2px;
 }
