--- a/src/scss/components/banner.scss
+++ b/src/scss/components/banner.scss
@@ -5,6 +5,7 @@
 .banner {
   @include center-flex;
   column-gap: 50px;
+  row-gap: 50px;
 }
 
 .banner__left {
@@ -13,6 +14,7 @@
   .banner__title {
     font-weight: 700;
     font-size: 80px;
+    font-size: calc((100vw - 1100px) / (1440 - 1100) * (80 - 56) + 56px);
     line-height: 1.1;
     text-align: left;
   }
@@ -20,6 +22,7 @@
   .banner__text {
     margin-top: 32px;
     font-size: 23px;
+    font-size: calc((100vw - 1100px) / (1440 - 1100) * (23 - 21) + 21px);
     line-height: 1.39;
     text-align: left;
   }
@@ -28,7 +31,7 @@
     text-align: left;
     display: flex;
     justify-content: flex-start;
-    align-items: center;
+    align-items: flex-start;
     column-gap: 24px;
     margin-top: 48px;
   }
@@ -51,6 +54,11 @@
     line-height: 150%;
   }
 
+  .try-now__wrapprer {
+    display: flex;
+    flex-direction: column;
+  }
+
   .try-now__links {
     padding-inline: 8px;
     text-align: left;
@@ -70,5 +78,49 @@
 
   .banner__img {
     max-width: 100%;
+    height: auto;
+  }
+}
+
+@include mid-screen() {
+  .banner {
+    flex-direction: column;
+    .banner__text,
+    .banner__title {
+      text-align: center;
+    }
+    .try-now__container,
+    .try-now__links {
+      @include center-flex;
+    }
+
+    .try-now__container {
+      align-items: flex-start;
+    }
+  }
+
+  .banner__left,
+  .banner__right {
+    width: 100%;
+  }
+
+  .banner__left {
+    .banner__title {
+      font-size: calc((100vw - 768px) / (1100 - 768) * (80 - 60) + 60px);
+    }
+    .banner__text {
+      font-size: calc((100vw - 768px) / (1100 - 768) * (23 - 21) + 21px);
+    }
+  }
+
+  .banner__right .banner__img {
+    max-width: 70%;
+    height: auto;
+  }
+}
+
+@include tablet-screen() {
+  .banner__left .banner__text {
+    font-size: 21px;
   }
 }
