--- a/src/scss/components/benefits.scss
+++ b/src/scss/components/benefits.scss
@@ -22,4 +22,18 @@
   #benefits-section {
     margin-top: 0;
   }
+  .benefits__text {
+    padding-inline: 32px;
+    font-size: calc((100vw - 768px) / (1100 - 768) * (44 - 32) + 32px);
+  }
+}
+
+@include tablet-screen() {
+  #benefits-section {
+    padding-block: 90px;
+  }
+  .benefits__text {
+    padding-inline: 16px;
+    font-size: calc((100vw - 480px) / (768 - 480) * (32 - 24) + 24px);
+  }
 }
