--- a/src/scss/components/ci-cd.scss
+++ b/src/scss/components/ci-cd.scss
@@ -62,6 +62,8 @@
   }
 }
 
+///////////////////////// adaptive //////////////////////////
+
 @include mid-screen() {
   #CI-CD-section {
     margin-top: 0;
@@ -84,5 +86,33 @@
   .ci-cd__left .ci-cd__links {
     margin-top: 40px;
     justify-content: center;
+  }
+}
+
+@include tablet-screen() {
+  .ci-cd__left .ci-cd__text {
+    font-size: 20px;
+  }
+
+  .ci-cd__left .ci-cd__links {
+    margin-top: 30px;
+  }
+}
+
+@include mobile-screen() {
+  .ci-cd__left .ci-cd__title {
+    font-size: 26px;
+  }
+
+  .ci-cd__left .ci-cd__text {
+    font-size: 18px;
+  }
+
+  .ci-cd__left .ci-cd__link {
+    width: 44%;
+    height: 46px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 }
