--- a/src/scss/components/header.scss
+++ b/src/scss/components/header.scss
@@ -77,7 +77,7 @@ header .btn-group {
   display: none;
 }
 
-/////////////  medium screen ////////////////
+/////////////  adaptive ////////////////
 
 @include mid-screen() {
   .btn-burger {
@@ -120,7 +120,7 @@ header .btn-group {
     width: 220px;
     background-color: $main-color;
     padding-inline: 16px;
-    opacity: 0.8;
+    opacity: 0.9;
     overflow: hidden;
     border-radius: 9px;
     transition-duration: 0.5s;
@@ -145,5 +145,16 @@ header .btn-group {
       top: -2px;
       right: 36px;
     }
+  }
+}
+
+@include mobile-screen() {
+  header {
+    padding-inline: 16px;
+  }
+
+  .logo-img {
+    width: 110px;
+    height: auto;
   }
 }
