--- a/src/scss/components/main.scss
+++ b/src/scss/components/main.scss
@@ -4,6 +4,25 @@ main {
   padding-bottom: 160px;
 }
 
+@include mid-screen() {
+  main {
+    text-align: center;
+    padding-inline: 32px;
+  }
+}
+
+@include tablet-screen() {
+  main {
+    padding-bottom: 90px;
+  }
+}
+
+@include mobile-screen() {
+  main {
+    padding-inline: 16px;
+  }
+}
+
 @import "banner";
 @import "benefits";
 @import "ci-cd";
