--- a/src/scss/components/testimonials.scss
+++ b/src/scss/components/testimonials.scss
@@ -17,6 +17,7 @@
   flex-wrap: nowrap;
   column-gap: 24px;
   overflow-x: auto;
+  padding-bottom: 12px;
 }
 
 .testimonials__card {
@@ -49,7 +50,7 @@
 .companies-logos {
   max-width: 1140px;
   padding-inline: 16px;
-  margin-top: 76px;
+  margin-top: 64px;
   margin-inline: auto;
   display: flex;
   flex-wrap: wrap;
@@ -57,4 +58,52 @@
   row-gap: 24px;
   align-items: center;
   justify-content: center;
+}
+
+@include mid-screen() {
+  #testimonials-section {
+    margin-top: 120px;
+  }
+
+  .testimonials__title {
+    font-size: calc((100vw - 768px) / (1100 - 768) * (54 - 42) + 42px);
+  }
+
+  .testimonials__card {
+    width: 44%;
+    flex: 0 0 44%;
+    max-width: 400px;
+  }
+
+  #testimonials__cards {
+    margin-top: 36px;
+  }
+
+  .companies-logos {
+    margin-top: 36px;
+  }
+}
+
+@include tablet-screen() {
+  .testimonials__card {
+    width: 86%;
+    flex: 0 0 86%;
+  }
+
+  .companies-logos img {
+    width: 24%;
+    max-width: 110px;
+  }
+}
+
+@include mobile-screen {
+  .testimonials__card {
+    width: 100%;
+    flex: 0 0 100%;
+  }
+
+  .companies-logos img {
+    width: 22%;
+    max-width: 110px;
+  }
 }
