--- a/src/scss/generalStyles/general.scss
+++ b/src/scss/generalStyles/general.scss
@@ -1,5 +1,6 @@
 html {
   max-width: 100vw;
+  overflow-x: hidden;
 }
 
 body {
@@ -8,6 +9,7 @@ body {
   background-color: lightgray;
   line-height: 1;
   max-width: 100vw;
+  overflow-x: hidden;
 }
 
 .app-container {
